--- a/scrap_clean_clust.ipynb
+++ b/scrap_clean_clust.ipynb
@@ -2048,10 +2048,12 @@
     "num = 0\n",
     "col = [*Term_Id.values()]\n",
     "for i in data.loc[:,'6']:\n",
-    "    app = cleanData(i, lang='italian')        score = []\n",
+    "    app = cleanData(i, lang='italian')        \n",
+    "    score = []\n",
     "    for word in Term_Id.keys():\n",
-    "        TfIdf = Tf(word,app)*Idf(word,Inv_Dict,Term_Id,data)\n",
-    "        score.append(TfIdf)\n",
+    "        if len(Term_Id[word])>1 and len(Term_Id[word])<10000:\n",
+    "            TfIdf = Tf(word,app)*Idf(word,Inv_Dict,Term_Id,data)\n",
+    "            score.append(TfIdf)\n",
     "    interest = pd.DataFrame([score],columns=col)\n",
     "    matrix = pd.concat([matrix,interest])\n",
     "    num += 1\n",
@@ -9783,7 +9785,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
