--- a/Homework_4.ipynb
+++ b/Homework_4.ipynb
@@ -999,7 +999,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1039,6 +1039,377 @@
    "source": [
     "As you can see, the centroids our function found (blue dots) differ from the k-means++ function of sklearn (red x's). This might be because we ran only for 500 iterations or some incorrect code. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import hashlib\n",
+    "import random\n",
+    "from itertools import islice\n",
+    "import fileinput\n",
+    "import functools\n",
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "size = 5000000\n",
+    "truth_d = {}\n",
+    "hash_d = {}\n",
+    "hash_d2 = {}\n",
+    "idx = 0\n",
+    "start = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(1),\"passwords_hash2_\"+str(1), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(2),\"passwords_hash2_\"+str(2), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(3),\"passwords_hash2_\"+str(3), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(3),\"passwords_hash2_\"+str(3), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(4),\"passwords_hash2_\"+str(4), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(5),\"passwords_hash2_\"+str(5), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(6),\"passwords_hash2_\"+str(6), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(7),\"passwords_hash2_\"+str(7), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(8),\"passwords_hash2_\"+str(8), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(9),\"passwords_hash2_\"+str(9), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(10),\"passwords_hash2_\"+str(10), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(11),\"passwords_hash2_\"+str(11), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(12),\"passwords_hash2_\"+str(12), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(13),\"passwords_hash2_\"+str(13), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(14),\"passwords_hash2_\"+str(14), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(15),\"passwords_hash2_\"+str(15), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(16),\"passwords_hash2_\"+str(16), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(17),\"passwords_hash2_\"+str(17), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(18),\"passwords_hash2_\"+str(18), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(19),\"passwords_hash2_\"+str(19), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(20),\"passwords_hash2_\"+str(20), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(21),\"passwords_hash2_\"+str(21), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "truth_d, hash_d, hash_d2, idx = functions.create_hash_file_and_dict(truth_d, hash_d,hash_d2, \"passwords_hash1\",\"passwords_hash2\",\"passwords_hash1_\"+str(22),\"passwords_hash2_\"+str(22), start, start+size,idx)\n",
+    "start = start+size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Find if two numbers fall in the same range "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1277  and  1671  are not in the same range\n",
+      "9856975612261844412011546508811955761088611763371  and  8832661167611481633339606810480102117781185097481  are not in the same range\n"
+     ]
+    }
+   ],
+   "source": [
+    "functions.same_range(hash_d, \"passwords_hash1.txt\")\n",
+    "functions.same_range(hash_d2, \"passwords_hash2.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "functions.find_dup()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28419480\n"
+     ]
+    }
+   ],
+   "source": [
+    "functions.false_positives(hash_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4790220\n"
+     ]
+    }
+   ],
+   "source": [
+    "functions.false_positives2(hash_d2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first hash function contains more false positive just because it's easier to find strings duplicates when the string themselves are alphabetically ordered; consequently, this increase the probability to find equal strings then, same hashes are created. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_obj(truth_d, \"truth_d\")\n",
+    "save_obj(hash_d, \"hash_d\")\n",
+    "save_obj(hash_d2, \"hash_d2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del truth_d\n",
+    "del hash_d\n",
+    "del hash_d2"
+   ]
   }
  ],
  "metadata": {
@@ -1057,7 +1428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
